SF Primes/src/objects/IMP_ExternalReferenceRecordTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to manage record types and its partner ID from external sources</description>
    <fields>
        <fullName>Field_Map_API_Name__c</fullName>
        <description>Used for mapping corresponding field from external entity on Project Activity Detail Mapping Rule record</description>
        <label>Field Map API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <description>Partner ID of SubProject External Reference record type</description>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Map_API_Name__c</fullName>
        <description>Used for mapping corresponding SubProject External Reference Record Type on Project Activity Detail Mapping Rule record</description>
        <label>Record Type Map API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <description>Source Object type of External Entity</description>
        <label>Source Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Activity_Date_Type_API_Field_Name__c</fullName>
        <description>Used for mapping corresponding field from Project Activity Detail Mapping Rule record with a value of Record Type-Activity Name-Date Type</description>
        <label>Target Activity Date Type API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IMP_ExternalReferenceRecordTypes</label>
</CustomObject>